# demikernel-proxy

./: Cargo.toml  Makefile  windows.mk
src/: main.rs
src/exec/: Cargo.toml  eval.rs  main.rs
src/rust/device_manager/: Cargo.toml  build.rs  mod.rs
src/rust/device_manager/protos/: manager.proto
src/rust/proxy/: Cargo.toml  constants.rs  mod.rs  tcp_in_libos.rs  udp_in_libos.rs
