#=======================================================================================================================
# Package
#=======================================================================================================================

[package]
name = "proxy_exe"
authors = ["Microsoft Corporation"]
edition = "2021"
resolver = "2"

#=======================================================================================================================
# Dependencies 
#=======================================================================================================================

[dependencies]
anyhow.workspace = true
tonic.workspace = true
tokio.workspace = true
device_manager = { path = "../rust/device_manager" }
proxy = { path = "../rust/proxy" }

#=======================================================================================================================
# Features 
#=======================================================================================================================

[features]
catnap-libos = [ "proxy/catnap-libos" ]
catnip-libos = [ "proxy/catnip-libos" ]
virtio-shmem = [ "proxy/virtio-shmem" ]
nimble-shmem = [ "proxy/nimble-shmem" ]
mlx4 = ["proxy/mlx4"]
mlx5 = ["proxy/mlx5"]

[[bin]]
name = "proxy_exe"
path = "main.rs"