#=======================================================================================================================
# Package
#=======================================================================================================================

[package]
name = "proxy_exe"
authors = ["Microsoft Corporation"]
edition = "2021"
resolver = "2"

#=======================================================================================================================
# Dependencies 
#=======================================================================================================================

[dependencies]
anyhow.workspace = true
tonic.workspace = true
tokio.workspace = true
demikernel.workspace = true
device_manager = { path = "../rust/device_manager" }
proxy = { path = "../rust/proxy" }

#=======================================================================================================================
# Features 
#=======================================================================================================================

[features]
catnap-libos = [ "demikernel/catnap-libos", "demikernel/catloop-libos" ]
catnip-libos = [ "demikernel/catnip-libos", "demikernel/catloop-libos" ]
virtio-shmem = [ "demikernel/virtio-shmem" ]
nimble-shmem = [ "demikernel/nimble-shmem" ]
mlx4 = ["demikernel/mlx4"]
mlx5 = ["demikernel/mlx5"]

[[bin]]
name = "proxy_exe"
path = "main.rs"

[[bin]]
name = "eval_aux"
path = "eval.rs"