#=======================================================================================================================
# Package
#=======================================================================================================================

[package]
name = "device_manager"
authors = ["Microsoft Corporation"]
edition = "2021"

#=======================================================================================================================
# Dependencies
#=======================================================================================================================
[dependencies]
# internal
proxy = { path = "../proxy" }

# gRPC
tonic.workspace = true
prost.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

# Hyper-V Device Virtualization
hdv = { path = "../../../../hvlite2/hcs/hdv" }
hcs_sample_lib = { path = "../../../../hvlite2/hcs/src" }
guid = { path = "../../../../hvlite2/support/guid" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9" }

[build-dependencies]
tonic-build = "0.11"

[lib]
name = "device_manager"
crate-type = ["cdylib", "rlib"]
path = "mod.rs"