#=======================================================================================================================
# Package
#=======================================================================================================================

[package]
name = "device_manager"
authors = ["Microsoft Corporation"]
edition = "2021"

#=======================================================================================================================
# Dependencies
#=======================================================================================================================
[dependencies]
# internal
proxy = { path = "../proxy" }
demikernel.workspace = true

# gRPC
tonic.workspace = true
prost.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

# Hyper-V Device Virtualization
hdv = { path = "../../../../hvlite2/hcs/hdv" }
hcs_sample_lib = { path = "../../../../hvlite2/hcs/src" }
guid = { path = "../../../../hvlite2/support/guid" }
sparse_mmap = { path =  "../../../../hvlite2/support/sparse_mmap" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9" }

[features]
profiler = ["demikernel/profiler"]
catnap-libos = [ "demikernel/catnap-libos", "demikernel/catloop-libos" ]
catnip-libos = [ "demikernel/catnip-libos", "demikernel/catloop-libos" ]
virtio-shmem = [ "demikernel/virtio-shmem" ]
nimble-shmem = [ "demikernel/nimble-shmem" ]
mlx4 = ["demikernel/mlx4"]
mlx5 = ["demikernel/mlx5"]

[build-dependencies]
tonic-build = "0.11"

[lib]
name = "device_manager"
crate-type = ["cdylib", "rlib"]
path = "mod.rs"