#=======================================================================================================================
# Package
#=======================================================================================================================

[package]
name = "proxy"
authors = ["Microsoft Corporation"]
edition = "2021"
resolver = "2"

#=======================================================================================================================
# Dependencies 
#=======================================================================================================================

[dependencies]
anyhow.workspace = true
demikernel.workspace = true
libc.workspace = true
yaml-rust = "0.4.5"
x86 = "0.52.0"

[target.'cfg(windows)'.dependencies]
# libc implementation in Rust is quite different for Windows and Linux. This library provides the relevant networking
# constants and data structures for Windows.
windows = { version = "0.54.0", features = [
    "Win32_Networking_WinSock",
] }

[features]
profiler = [ "demikernel/profiler" ]
catnap-libos = [ "demikernel/catnap-libos", "demikernel/catloop-libos" ]
catnip-libos = [ "demikernel/catnip-libos", "demikernel/catloop-libos" ]
virtio-shmem = [ "demikernel/virtio-shmem" ]
nimble-shmem = [ "demikernel/nimble-shmem" ]
mlx4 = ["demikernel/mlx4"]
mlx5 = ["demikernel/mlx5"]

[lib]
name = "proxy"
crate-type = ["cdylib", "rlib"]
path = "mod.rs"